# enterprise-ai-use-cases

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/research-complete/: SKILL.md
.agents/skills/research-new/: SKILL.md
.agents/templates/: evaluation.md  implementation-guide.md  references.md  solution-design.md  use-case.md
.github/workflows/: deploy-pages.yml
docs/: PROMPT.md  _config.yml  index.html
docs/_includes/: footer.html  header.html
docs/_layouts/: default.html  use-case-detail.html  use-case.html
docs/_use_cases/UC-001-autonomous-ap-invoice-processing/: index.md
docs/_use_cases/UC-002-autonomous-mortgage-loan-document-processing/: index.md
docs/_use_cases/uc-020-freight-logistics-automation/: index.md  (+4 more)
docs/plans/: claude-research-runner-plan.md  claude-research-runner-spec.md
docs/use-cases/: README.md
scripts/: copy-brand-assets.sh  deploy.py  generate-docs.py
src/claude_research_runner/: README.md  app.py  claude_exec.py  cli.py  config.py  console.py  git_ops.py  limit_detection.py  models.py  state.py  topic_inference.py  verification.py
src/claude_research_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/research_runner/: README.md  app.py  claims.py  cli.py  config.py  console.py  git_ops.py  models.py  skill_resolver.py  state.py  topic_inference.py  verification.py
tests/: test_claims.py  test_claude_exec.py  test_git_ops.py  test_limit_detection.py  test_topic_inference.py  test_verification.py  test_workflow_resume.py
tests/support/: fake_claude.py
use-cases/: README.md
(+238 files in other folders)
