[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-research-runner"
version = "0.1.0"
description = "Automate Claude Code research-new and research-complete runs for this repository."
requires-python = ">=3.11"
authors = [
  { name = "Bootbase" }
]

[project.scripts]
claude-research-runner = "claude_research_runner.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

