[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "research-runner"
version = "0.2.0"
description = "Automate research-new and research-complete runs with any coding agent (Claude, Codex, etc.)."
requires-python = ">=3.11"

[project.scripts]
research-runner = "research_runner.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
